# fastapi-with-otel

./: Makefile  README.md  docker-compose.yml  main.py  otel-collector-config.yaml  pyproject.toml  sample_data.sh
app/: main.py  middleware.py  otel_setup.py
config/: loki.yaml  otel-collector-config.yaml  prometheus.yml  tempo.yaml
config/provisioning/datasources/: datasources.yml
